@@ -4,6 +4,17 @@ import com.microsoft.graph.models.User;
 import jakarta.servlet.http.HttpSession;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
+import org.modelmapper.ModelMapper;
+import java.io.IOException;
+import java.util.ArrayList;
+import java.util.HashMap;
+import java.util.List;
+import java.util.Map;
+import java.util.Objects;
+import java.util.Optional;
+import java.util.Set;
+import java.util.stream.Collectors;
+
 import org.springframework.security.access.prepost.PreAuthorize;
 import org.springframework.stereotype.Controller;
 import org.springframework.ui.Model;
@@ -12,24 +23,17 @@ import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.PostMapping;
 import org.springframework.web.bind.annotation.RequestParam;
 import org.springframework.web.servlet.view.RedirectView;
+import uk.gov.justice.laa.portal.landingpage.dto.AppRoleDto;
+import uk.gov.justice.laa.portal.landingpage.dto.EntraUserDto;
+
 import uk.gov.justice.laa.portal.landingpage.dto.OfficeData;
+import uk.gov.justice.laa.portal.landingpage.entity.Office;
+import uk.gov.justice.laa.portal.landingpage.model.OfficeModel;
 import uk.gov.justice.laa.portal.landingpage.model.PaginatedUsers;
-import uk.gov.justice.laa.portal.landingpage.model.ServicePrincipalModel;
-import uk.gov.justice.laa.portal.landingpage.model.UserModel;
-import uk.gov.justice.laa.portal.landingpage.model.UserRole;
+import uk.gov.justice.laa.portal.landingpage.service.OfficeService;
 import uk.gov.justice.laa.portal.landingpage.service.UserService;
-
-import java.io.IOException;
-
-import java.util.Objects;
-import java.util.List;
-import java.util.Stack;
-import java.util.ArrayList;
-import java.util.Map;
-import java.util.HashMap;
-import java.util.Optional;
-import java.util.Set;
-import java.util.stream.Collectors;
+import uk.gov.justice.laa.portal.landingpage.viewmodel.AppRoleViewModel;
+import uk.gov.justice.laa.portal.landingpage.viewmodel.AppViewModel;
 
 import static uk.gov.justice.laa.portal.landingpage.utils.RestUtils.getListFromHttpSession;
 import static uk.gov.justice.laa.portal.landingpage.utils.RestUtils.getObjectFromHttpSession;
@@ -43,6 +47,8 @@ import static uk.gov.justice.laa.portal.landingpage.utils.RestUtils.getObjectFro
 public class UserController {
 
     private final UserService userService;
+    private final OfficeService officeService;
+    private final ModelMapper mapper;
 
     /**
      * Retrieves a list of users from Microsoft Graph API.
@@ -91,10 +97,8 @@ public class UserController {
      */
     @GetMapping("/userlist")
     public String displaySavedUsers(Model model) {
-
-        List<UserModel> users = userService.getSavedUsers();
+        List<EntraUserDto> users = userService.getSavedUsers();
         model.addAttribute("users", users);
-
         return "users";
     }
 
@@ -115,10 +119,12 @@ public class UserController {
     public String manageUser(@PathVariable String id, Model model) {
         User user = userService.getUserById(id);
         String lastLoggedIn = userService.getLastLoggedInByUserId(id);
-        List<UserRole> userAppRoles = userService.getUserAppRolesByUserId(id);
+        List<AppRoleDto> userAppRoles = userService.getUserAppRolesByUserId(id);
+        List<Office> offices = officeService.getOffices();
         model.addAttribute("user", user);
         model.addAttribute("lastLoggedIn", lastLoggedIn);
         model.addAttribute("userAppRoles", userAppRoles);
+        model.addAttribute("offices", offices);
         return "manage-user";
     }
 
@@ -152,9 +158,12 @@ public class UserController {
     @GetMapping("/user/create/services")
     public String selectUserApps(Model model, HttpSession session) {
         List<String> selectedApps = getListFromHttpSession(session, "apps", String.class).orElseGet(ArrayList::new);
-        List<ServicePrincipalModel> apps = userService.getServicePrincipals().stream()
-                .map(servicePrincipal -> new ServicePrincipalModel(servicePrincipal, selectedApps.contains(servicePrincipal.getAppId())))
-                .collect(Collectors.toList());
+        List<AppViewModel> apps = userService.getApps().stream()
+                .map(appDto -> {
+                    AppViewModel appViewModel = mapper.map(appDto, AppViewModel.class);
+                    appViewModel.setSelected(selectedApps.contains(appDto.getId()));
+                    return appViewModel;
+                }).toList();
         model.addAttribute("apps", apps);
         User user = getObjectFromHttpSession(session, "user", User.class).orElseGet(User::new);
         model.addAttribute("user", user);
@@ -171,14 +180,15 @@ public class UserController {
     @GetMapping("/user/create/roles")
     public String getSelectedRoles(Model model, HttpSession session) {
         List<String> selectedApps = getListFromHttpSession(session, "apps", String.class).orElseGet(ArrayList::new);
-        List<UserRole> roles = userService.getAllAvailableRolesForApps(selectedApps);
+        List<AppRoleDto> roles = userService.getAllAvailableRolesForApps(selectedApps);
         List<String> selectedRoles = getListFromHttpSession(session, "roles", String.class).orElseGet(ArrayList::new);
-        for (UserRole role : roles) {
-            if (selectedRoles.contains(role.getAppRoleId())) {
-                role.setSelected(true);
-            }
-        }
-        model.addAttribute("roles", roles);
+        List<AppRoleViewModel> appRoleViewModels = roles.stream()
+                .map(appRoleDto -> {
+                    AppRoleViewModel viewModel = mapper.map(appRoleDto, AppRoleViewModel.class);
+                    viewModel.setSelected(selectedRoles.contains(appRoleDto.getId().toString()));
+                    return viewModel;
+                }).toList();
+        model.addAttribute("roles", appRoleViewModels);
         return "add-user-roles";
     }
 
@@ -191,15 +201,34 @@ public class UserController {
 
     @GetMapping("/user/create/offices")
     public String offices(HttpSession session, Model model) {
-        OfficeData officeData = getObjectFromHttpSession(session, "officeData", OfficeData.class).orElseGet(OfficeData::new);
+        OfficeData selectedOfficeData = getObjectFromHttpSession(session, "officeData", OfficeData.class).orElseGet(OfficeData::new);
+        //if user has firms, use officeService.getOfficesByFirms();
+        List<Office> offices = officeService.getOffices();
+        List<OfficeModel> officeData = offices.stream()
+                .map(office -> new OfficeModel(office.getName(), office.getAddress(),
+                office.getId().toString(), Objects.nonNull(selectedOfficeData.getSelectedOffices())
+                && selectedOfficeData.getSelectedOffices().contains(office.getId().toString())))
+                .collect(Collectors.toList());
         model.addAttribute("officeData", officeData);
+        User user = getObjectFromHttpSession(session, "user", User.class).orElseGet(User::new);
+        model.addAttribute("user", user);
         return "user/offices";
     }
 
     @PostMapping("/user/create/offices")
-    public RedirectView postOffices(HttpSession session, @RequestParam(value = "office", required = false) List<String> selectedOffices) {
+    public RedirectView postOffices(HttpSession session, @RequestParam(value = "offices") List<String> selectedOffices) {
         OfficeData officeData = new OfficeData();
         officeData.setSelectedOffices(selectedOffices);
+        //if user has firms, use officeService.getOfficesByFirms();
+        List<Office> offices = officeService.getOffices();
+        List<String> selectedDisplayNames = new ArrayList<>();
+        for (Office office : offices) {
+            if (Objects.nonNull(selectedOffices)
+                    && selectedOffices.contains(office.getId().toString())) {
+                selectedDisplayNames.add(office.getName());
+            }
+        }
+        officeData.setSelectedOfficesDisplay(selectedDisplayNames);
         session.setAttribute("officeData", officeData);
         return new RedirectView("/user/create/check-answers");
     }
@@ -208,14 +237,14 @@ public class UserController {
     public String addUserCheckAnswers(Model model, HttpSession session) {
         List<String> selectedApps = getListFromHttpSession(session, "apps", String.class).orElseGet(ArrayList::new);
         if (!selectedApps.isEmpty()) {
-            List<UserRole> roles = userService.getAllAvailableRolesForApps(selectedApps);
+            List<AppRoleDto> roles = userService.getAllAvailableRolesForApps(selectedApps);
             List<String> selectedRoles = getListFromHttpSession(session, "roles", String.class).orElseGet(ArrayList::new);
-            Map<String, List<UserRole>> cyaRoles = new HashMap<>();
-            for (UserRole role : roles) {
-                if (selectedRoles.contains(role.getAppRoleId())) {
-                    List<UserRole> appRoles = cyaRoles.getOrDefault(role.getAppId(), new ArrayList<>());
-                    appRoles.add(role);
-                    cyaRoles.put(role.getAppId(), appRoles);
+            Map<String, List<AppRoleViewModel>> cyaRoles = new HashMap<>();
+            for (AppRoleDto role : roles) {
+                if (selectedRoles.contains(role.getId())) {
+                    List<AppRoleViewModel> appRoles = cyaRoles.getOrDefault(role.getApp().getId(), new ArrayList<>());
+                    appRoles.add(mapper.map(role, AppRoleViewModel.class));
+                    cyaRoles.put(role.getApp().getId(), appRoles);
                 }
             }
             model.addAttribute("roles", cyaRoles);
@@ -236,12 +265,20 @@ public class UserController {
         if (userOptional.isPresent()) {
             User user = userOptional.get();
             List<String> selectedRoles = getListFromHttpSession(session, "roles", String.class).orElseGet(ArrayList::new);
-            userService.createUser(user, selectedRoles);
+            Optional<OfficeData> optionalSelectedOfficeData = getObjectFromHttpSession(session, "officeData", OfficeData.class);
+            List<String> selectedOffices;
+            if (optionalSelectedOfficeData.isPresent()) {
+                selectedOffices = optionalSelectedOfficeData.get().getSelectedOffices();
+            } else {
+                selectedOffices = new ArrayList<>();
+            }
+            userService.createUser(user, selectedRoles, selectedOffices);
         } else {
             log.error("No user attribute was present in request. User not created.");
         }
         session.removeAttribute("roles");
         session.removeAttribute("apps");
+        session.removeAttribute("officeData");
         return new RedirectView("/users");
     }
 
@@ -263,11 +300,11 @@ public class UserController {
     @GetMapping("/users/edit/{id}/roles")
     public String getUserRoles(@PathVariable String id, Model model) {
         User user = userService.getUserById(id);
-        List<UserRole> userRoles = userService.getUserAppRolesByUserId(id);
-        List<UserRole> availableRoles = userService.getAllAvailableRoles();
+        List<AppRoleDto> userRoles = userService.getUserAppRolesByUserId(id);
+        List<AppRoleDto> availableRoles = userService.getAllAvailableRoles();
 
         Set<String> userAssignedRoleIds = userRoles.stream()
-                .map(UserRole::getAppRoleId)
+                .map(AppRoleDto::getId)
                 .collect(Collectors.toSet());
 
         model.addAttribute("user", user);
@@ -282,7 +319,7 @@ public class UserController {
      */
     @PostMapping("/users/edit/{id}/roles")
     public RedirectView updateUserRoles(@PathVariable String id,
-                                  @RequestParam(required = false) List<String> selectedRoles) {
+            @RequestParam(required = false) List<String> selectedRoles) {
         userService.updateUserRoles(id, selectedRoles);
         return new RedirectView("/users");
     }
